; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_filter/channel_mixer/extr_simple.c_DoWork_7_x_to_4_0.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_filter/channel_mixer/extr_simple.c_DoWork_7_x_to_4_0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_11__ = type { i32, i64 }

@AOUT_CHAN_LFE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*, %struct.TYPE_11__*, %struct.TYPE_11__*)* @DoWork_7_x_to_4_0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DoWork_7_x_to_4_0(%struct.TYPE_10__* %0, %struct.TYPE_11__* %1, %struct.TYPE_11__* %2) #0 {
  %4 = alloca %struct.TYPE_10__*, align 8
  %5 = alloca %struct.TYPE_11__*, align 8
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca float*, align 8
  %8 = alloca float*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %4, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %5, align 8
  store %struct.TYPE_11__* %2, %struct.TYPE_11__** %6, align 8
  %10 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %11 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to float*
  store float* %13, float** %7, align 8
  %14 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to float*
  store float* %17, float** %8, align 8
  %18 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  store i32 %20, i32* %9, align 4
  br label %21

21:                                               ; preds = %89, %3
  %22 = load i32, i32* %9, align 4
  %23 = add nsw i32 %22, -1
  store i32 %23, i32* %9, align 4
  %24 = icmp ne i32 %22, 0
  br i1 %24, label %25, label %90

25:                                               ; preds = %21
  %26 = load float*, float** %8, align 8
  %27 = getelementptr inbounds float, float* %26, i64 6
  %28 = load float, float* %27, align 4
  %29 = load float*, float** %8, align 8
  %30 = getelementptr inbounds float, float* %29, i64 0
  %31 = load float, float* %30, align 4
  %32 = fmul float 5.000000e-01, %31
  %33 = fadd float %28, %32
  %34 = load float*, float** %8, align 8
  %35 = getelementptr inbounds float, float* %34, i64 2
  %36 = load float, float* %35, align 4
  %37 = fdiv float %36, 6.000000e+00
  %38 = fadd float %33, %37
  %39 = load float*, float** %7, align 8
  %40 = getelementptr inbounds float, float* %39, i32 1
  store float* %40, float** %7, align 8
  store float %38, float* %39, align 4
  %41 = load float*, float** %8, align 8
  %42 = getelementptr inbounds float, float* %41, i64 6
  %43 = load float, float* %42, align 4
  %44 = load float*, float** %8, align 8
  %45 = getelementptr inbounds float, float* %44, i64 1
  %46 = load float, float* %45, align 4
  %47 = fmul float 5.000000e-01, %46
  %48 = fadd float %43, %47
  %49 = load float*, float** %8, align 8
  %50 = getelementptr inbounds float, float* %49, i64 3
  %51 = load float, float* %50, align 4
  %52 = fdiv float %51, 6.000000e+00
  %53 = fadd float %48, %52
  %54 = load float*, float** %7, align 8
  %55 = getelementptr inbounds float, float* %54, i32 1
  store float* %55, float** %7, align 8
  store float %53, float* %54, align 4
  %56 = load float*, float** %8, align 8
  %57 = getelementptr inbounds float, float* %56, i64 2
  %58 = load float, float* %57, align 4
  %59 = fdiv float %58, 6.000000e+00
  %60 = load float*, float** %8, align 8
  %61 = getelementptr inbounds float, float* %60, i64 4
  %62 = load float, float* %61, align 4
  %63 = fadd float %59, %62
  %64 = load float*, float** %7, align 8
  %65 = getelementptr inbounds float, float* %64, i32 1
  store float* %65, float** %7, align 8
  store float %63, float* %64, align 4
  %66 = load float*, float** %8, align 8
  %67 = getelementptr inbounds float, float* %66, i64 3
  %68 = load float, float* %67, align 4
  %69 = fdiv float %68, 6.000000e+00
  %70 = load float*, float** %8, align 8
  %71 = getelementptr inbounds float, float* %70, i64 5
  %72 = load float, float* %71, align 4
  %73 = fadd float %69, %72
  %74 = load float*, float** %7, align 8
  %75 = getelementptr inbounds float, float* %74, i32 1
  store float* %75, float** %7, align 8
  store float %73, float* %74, align 4
  %76 = load float*, float** %8, align 8
  %77 = getelementptr inbounds float, float* %76, i64 7
  store float* %77, float** %8, align 8
  %78 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %79 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %78, i32 0, i32 0
  %80 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %79, i32 0, i32 0
  %81 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %80, i32 0, i32 0
  %82 = load i32, i32* %81, align 4
  %83 = load i32, i32* @AOUT_CHAN_LFE, align 4
  %84 = and i32 %82, %83
  %85 = icmp ne i32 %84, 0
  br i1 %85, label %86, label %89

86:                                               ; preds = %25
  %87 = load float*, float** %8, align 8
  %88 = getelementptr inbounds float, float* %87, i32 1
  store float* %88, float** %8, align 8
  br label %89

89:                                               ; preds = %86, %25
  br label %21

90:                                               ; preds = %21
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
